# inverse-scaling-ttc

./: .env.example  .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  run_experiment.py
anonymous_docs/: .gitignore  README.md  index.html  script.js  script_simple.js
config/: config.yaml
config/analysis/: default.yaml
config/api/: default.yaml
config/evaluation/: default.yaml
config/experiment/: base.yaml
config/model/: claude_3_5.yaml  claude_3_6.yaml  claude_3_7.yaml  claude_4_opus.yaml  claude_4_sonnet.yaml  deepseek_r1.yaml  deepseek_r1_0528_awq.yaml  deepseek_r1_7b.yaml  gpt_4_1_mini.yaml  o1.yaml  o1_mini.yaml  o3.yaml  o3_mini.yaml  o4_mini.yaml  qwen3_14b.yaml  qwen3_32b.yaml  qwen3_8b.yaml  qwq_32b.yaml
config/output/: default.yaml
config/task/: bbeh_tasks.yaml  bias_task.yaml  capability_math_tasks.yaml  model_written_eval.yaml  old_inverse_scaling.yaml  overfitting_tasks.yaml  random_tasks.yaml  regression_tasks.yaml  synthetic_tasks.yaml
docs/: index.html  integrate_demo_data.js  script.js  serve.py
scripts/: add_scaling_columns.py  add_simple_canary.py  analyze_gpa_regression_trends.py  download_data.py  generate_dataset.py
scripts/cluster/: monitor_parallel_jobs.sh  run_all_experiments.sh  run_job_parallel.sh  submit_jobs_parallel.sh
src/: batch_model_interface.py  config_utils.py  evaluator.py  model_interface.py  results_manager.py  task_loader.py  vllm_model_interface.py
src/gym/: __init__.py  inverse_scaling_gym.py  register_tasks.py
src/utils/: analysis.py  config_migration.py  model_helpers.py  (+1 more)
(+89 files in other folders)
